[package]
name = "rust-loader"
version = "0.1.0"
edition = "2021"

[lib]
name = "rustloaderlib"
path = "src/lib.rs"
crate-type = ["cdylib"]

[[bin]]
name = "rustloaderexe"
path = "src/bin.rs"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = "0.21.4"
windows-sys = { version = "0.48.0", features = ["Win32_System_Memory", "Win32_Foundation", "Win32_System_Threading", "Win32_Security", "Win32_System_SystemServices"] }

[features]
no_console = []


[profile.release]
strip = true  # Automatically strip symbols from the binary.
opt-level = "z"  # Optimize for size.
lto = true
codegen-units = 1
panic = "abort"
